k8s/otenki-front-end/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otenki-nginx
  labels:
    app: otenki-nginx
spec:
  selector:
    app: otenki-nginx
  ports:
    - name: http
      port: 80
  type: NodePort
