k8s/otenki-front-end/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: otenki-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: otenki-servicer
              servicePort: 80
